syntax = "proto3";
package seiprotocol.seichain.confidentialtransfers;

import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "confidentialtransfers/confidential.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/confidentialtransfers/types";

// Query defines the gRPC querier service.
service Query {
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {
    option (google.api.http) = {
      get: "/seichain/confidentialtransfers/account/{address}/{denom}"
    };
  }

  rpc GetAllAccounts (GetAllAccountsRequest) returns (GetAllAccountsResponse) {
    option (google.api.http) = {
      get: "/seichain/confidentialtransfers/account/{address}"
    };
  }
}

message GetAccountRequest {
  string address = 1;
  string denom = 2;
}

message GetAccountResponse {
  CtAccount account = 1;
}

message GetAllAccountsRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string address = 1;

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message GetAllAccountsResponse {
  repeated CtAccountWithDenom accounts = 1 [(gogoproto.nullable) = false];

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}